--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,8 +1,6 @@
 .post {
   width: 485px;
-  margin: 0px 25px 50px 25px;
-  display: flex;
-  flex-direction: column;
+  margin: 0px 25px 40px 25px;
 }
 
 .postImg {
@@ -45,14 +43,14 @@
 }
 
 .postDesc {
-    font-family: 'Varela Round', sans-serif;
-    font-size: 14px;
-    color: #444;
-    line-height: 24px;
-    margin-top: 15px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
+  font-family: "Varela Round", sans-serif;
+  font-size: 14px;
+  color: #444;
+  line-height: 24px;
+  margin-top: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
