--- a/src/components/singlePost/singlePost.css
+++ b/src/components/singlePost/singlePost.css
@@ -1,61 +1,100 @@
 .singlePost {
-    flex: 9
+  flex: 9;
 }
 
-.singlePostWrapper{
-    padding: 20px;
-    padding-right: 0px;
+.singlePostWrapper {
+  padding: 20px;
+  padding-right: 0px;
+  display: flex;
+  flex-direction: column;
 }
 
-.singlePostImg{
-    width: 100%;
-    height: 500px;
-    border-radius: 5px;
-    object-fit: cover;
+.singlePostImg {
+  width: 100%;
+  height: 500px;
+  border-radius: 5px;
+  object-fit: cover;
 }
 
 .singlePostTitle {
-    text-align: center;
-    margin: 10px;
-    font-family: 'Lora', serif;
-    font-size: 30px;
+  text-align: center;
+  margin: 10px;
+  font-family: "Lora", serif;
+  font-size: 30px;
+}
+
+.singlePostTitleInput {
+  margin: 10px;
+  font-family: "Lora", serif;
+  font-size: 30px;
+  text-align: center;
+  border: none;
+  border-bottom: 1px solid lightgray;
+}
+
+.singlePostTitleInput:focus {
+  outline: none;
+  color: gray;
 }
 
 .singlePostEdit {
-    float: right;
-    font-size: 16px;
+  float: right;
+  font-size: 16px;
 }
 
 .singlePostIcon {
-    margin-left: 10px;
-    cursor: pointer;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 .singlePostIcon:first-child {
-    color: teal;
+  color: teal;
 }
 
 .singlePostIcon:last-child {
-    color: tomato;
+  color: tomato;
 }
 
 .singlePostInfo {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    font-size: 16px;
-    font-family: 'Varela-Round', sans-serif;
-    color: #b39656;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  font-family: "Varela-Round", sans-serif;
+  color: #b39656;
 }
 
-.singlePostDesc{
-    color: #666;
-    font-size: 18px;
-    line-height: 25px;
+.singlePostDesc {
+  color: #666;
+  font-size: 18px;
+  line-height: 25px;
 }
 
 .singlePostDesc::first-letter {
-    margin-left: 20px;
-    font-size: 30px;
-    font-weight: 600;
+  margin-left: 20px;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.singlePostDescInput {
+  border: none;
+  color: #666;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.singlePostDescInput:focus {
+    outline: none;
+}
+
+.singlePostButton {
+    width: 100px;
+    border: none;
+    background-color: teal;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-end;
+    margin-top: 20px;
 }
